ruka-lang.org/src/lib/interpreter/fixtures/type-err/string-plus.ruka
// expect: '+' does not concatenate strings
let main = () do
    let s = "a" + "b"
end
